# spacy-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  make.sh  run.sh
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: linux.yml
examples/: python-spacy-usage.py
examples/cmake-add-subdirectory-hdr/: CMakeLists.txt  README.md
examples/cmake-add-subdirectory-hdr/src/: exprog1.cpp
examples/cmake-add-subdirectory-lib/: CMakeLists.txt  README.md
examples/cmake-add-subdirectory-lib/src/: exprog2.cpp
src/spacy/: attrs.cpp  attrs.h  doc.cpp  doc.h  morph.cpp  morph.h  morphanalysis.cpp  morphanalysis.h  nlp.cpp  nlp.h  pyobjectptr.cpp  pyobjectptr.h  python.cpp  python.h  spacy  spacy.cpp  spacy.h  span.cpp  span.h  stringstore.cpp  stringstore.h  token.cpp  token.h  vocab.cpp  vocab.h
tests/: test_attrs.cpp  test_doc.cpp  test_morphanalysis.cpp  test_nlp.cpp  test_spacy.cpp  test_span.cpp  test_stringstore.cpp  test_token.cpp  test_vocab.cpp  unittest.h
